Established more sensible defaults for displaying the rendered text in the body_editing_widget.html. Added space following paragraphs (much better spacing), properly displays syntax coloring, and em no longer looks quite as horrific.

--- a/media/lifeflow/editor/editor.css
+++ b/media/lifeflow/editor/editor.css
@@ -427,3 +427,18 @@ div.files div.add {
     border: solid 1px cyan;
     float: left;
 }
+
+
+/* Styling for the Rendering view */
+
+#render {
+    overflow: auto;
+}
+
+#render em {
+    background: none;
+}
+
+#render p {
+    padding-bottom: 20px;
+}
